--- a/index.html
+++ b/index.html
@@ -17,11 +17,48 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- custom CSS -->
-		<link rel="stylesheet" href="/.style.css" />
+		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
-		<div class="jumbotron text-center">
-			<h1 class="home-title">Building a PC?</h1>
+		<!-- navbar -->
+		<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+			<div class="container-fluid navigation">
+				<div class="jumbotron home-title">
+					<h1>Building a PC?</h1>
+				</div>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse centered"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="#"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">FAQ</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<div class="container-fluid text-field">
+			<div class="row">
+				<div class="col-lg-7 col-md-6 text-holder">HI</div>
+			</div>
 		</div>
 	</body>
 </html>
